#460 - Fixing type ahead wrap boxes #954 - Supporting EspressiScale

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -163,7 +163,7 @@ ion-segment-button {
     --indicator-color:var(--ion-color-accent);
   }
   ion-card {
-    border: 1px solid var(--ion-color-medium)!important;
+    border: 1px solid var(--ion-border-color)!important;
   }
 }
 
