--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -170,6 +170,7 @@
   --ion-color-graph-background: #222428;
   --ion-item-sort-background: #222428;
   --ion-header-background-color: #222428;
+  --ion-border-color: #29292D;
 
   --ion-color-primary: #383a3e;
   --ion-color-primary-rgb: 56, 58, 62;
